--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Visualize by TEMPLATED</title>
+		<title>Aman Jain</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="./static/assets/css/main.css" />
@@ -36,55 +36,55 @@
 								<div>
 									<a href="./static/images/fulls/NYC.jpg">
 										<img src="./static/images/thumbs/NYC.jpg" alt="" />
-										<h3>New York</h3>
+										<h3>Brooklyn Bridge, New York</h3>
 									</a>
 									<a href="./static/images/fulls/Chicago.jpeg">
 										<img src="./static/images/thumbs/Chicago.jpeg" alt="" />
-										<h3>Chicago</h3>
+										<h3>Chicago SkyDeck</h3>
 									</a>
 									<a href="./static/images/fulls/detroit.jpg">
 										<img src="./static/images/thumbs/detroit.jpg" alt="" />
-										<h3>Detroit</h3>
+										<h3>Go Detroit Lions!</h3>
 									</a>
 									<a href="images/fulls/IIT.jpg">
 										<img src="./static/images/thumbs/IIT.jpg" alt="" />
-										<h3>IIT</h3>
+										<h3>My batchmates at IIT</h3>
 									</a>
-									<a href="./static/images/fulls/Amsterdam.jpg">
-										<img src="./static/images/thumbs/Amsterdam.jpg" alt="" />
-										<h3>Amsterdam</h3>
+									<a href="./static/images/fulls/Amsterdam.JPG">
+										<img src="./static/images/thumbs/Amsterdam.JPG" alt="" />
+										<h3>One weekend well-spent in Amsterdam</h3>
 									</a>
 									<a href="./static/images/fulls/Salzburg.jpg">
 										<img src="./static/images/thumbs/Salzburg.jpg" alt="" />
-										<h3>Salzburg</h3>
+										<h3>Let's take a picture!</h3>
 									</a>
 								</div>
 								<div>
 									<a href="./static/images/fulls/lion.jpg">
 										<img src="./static/images/thumbs/lion.jpg" alt="" />
-										<h3>Lions Park</h3>
+										<h3>Chilling with lions in Lions Park</h3>
 									</a>
 									<a href="./static/images/fulls/Shanghai.jpeg">
 										<img src="./static/images/thumbs/Shanghai.jpeg" alt="" />
-										<h3>Shanghai</h3>
+										<h3>At the Shanghai Bund</h3>
 									</a>
 									<a href="./static/images/fulls/Cape.jpg">
 										<img src="./static/images/thumbs/Cape.jpg" alt="" />
-										<h3>Cape Town</h3>
+										<h3>Table Mountain, Cape Town</h3>
 									</a>
 									<a href="./static/images/fulls/archery.jpg">
 										<img src="./static/images/thumbs/archery.jpg" alt="" />
-										<h3>Archery</h3>
+										<h3>Non-office hours activities - Archery</h3>
 									</a>
-									<a href="./static/images/fulls/suzhou.jpg">
-										<img src="./static/images/thumbs/suzhou.jpg" alt="" />
-										<h3>Suzhou</h3>
+									<a href="./static/images/fulls/suzhou.JPG">
+										<img src="./static/images/thumbs/suzhou.JPG" alt="" />
+										<h3>My 2020 first and last destination - Suzhou</h3>
 									</a>
 								</div>
 								<div>
-									<a href="./static/images/fulls/jump.jpg">
-										<img src="./static/images/thumbs/jump.jpg" alt="" />
-										<h3>Johannesburg</h3>
+									<a href="./static/images/fulls/jump.JPG">
+										<img src="./static/images/thumbs/jump.JPG" alt="" />
+										<h3>A Leap of faith</h3>
 									</a>
 									<a href="./static/images/fulls/Dinner.jpg">
 										<img src="./static/images/thumbs/Dinner.jpg" alt="" />
@@ -92,23 +92,23 @@
 									</a>
 									<a href="./static/images/fulls/Beijing.jpg">
 										<img src="./static/images/thumbs/Beijing.jpg" alt="" />
-										<h3>Beijing</h3>
+										<h3>My first international trip - Beijing</h3>
 									</a>
 									<a href="./static/images/fulls/IIT Football.jpg">
 										<img src="./static/images/thumbs/IIT Football.jpg" alt="" />
-										<h3>IIT Football</h3>
+										<h3>My IIT Football Team</h3>
 									</a>
 									<a href="./static/images/fulls/Zurich.jpg">
 										<img src="./static/images/thumbs/Zurich.jpg" alt="" />
-										<h3>Zurich</h3>
+										<h3>One day at ETH Zurich</h3>
 									</a>
 									<a href="./static/images/fulls/Nue Castle.jpg">
 										<img src="./static/images/thumbs/Nue Castle.jpg" alt="" />
-										<h3>Neuschwanstein Castle</h3>
+										<h3>Hiking near Neuschwanstein Castle</h3>
 									</a>
 									<a href="./static/images/fulls/washington.jpg">
 										<img src="./static/images/thumbs/washington.jpg" alt="" />
-										<h3>Washington DC</h3>
+										<h3>US Diaries - Washington DC</h3>
 									</a>
 								</div>
 							</section>
